src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__add_movie_ui__add_movie_ui_tests__tests__snapshot_tests__AddMovieSelectMinimumAvailability_CollectionDetails.snap
---
source: src/ui/radarr_ui/library/add_movie_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Collection ▼                         Number of Movies         Root Folder Path         Quality Profile          Search on Add             Monitored               
=> Test Collection                      1                        /nfs/movies              HD - 1080p               Yes                       🏷                       
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Test Collection  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │Overview: Collection blah blah blah                                                                                       │                     
                    │Root Folder Path: /nfs/movies                                                                                             │                     
                    │Quality Profile: HD - 1080p                                                                                               │                     
                    │Minimum Avai╭──────────────────────────────────────  Add Movie - Test  ───────────────────────────────────────╮           │                     
                    │Monitored: Y│                                 Collection movie blah blah blah                                 │           │                     
                    │Search on Ad│                                                                                                 │           │                     
                    │            │              It was shot in Madison, Wisconsin: a city the cast never really left.              │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                             The sequel took seven years to finish.                              │           │                     
                    │  Movies  ──│                                                                                                 │───────────│                     
                    │   ✔  Title │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │=> ✔  Test  │                                ╭───────────────────────────────╮                         ▼ │    │           │                     
                    │            │                                │Announced                      │───────────────────────────╯    │           │                     
                    │            │                                │In Cinemas                     │───────────────────────────╮    │           │                     
                    │            │                                │Released                       │                         ▼ │    │           │                     
                    │            │                                │TBA                            │───────────────────────────╯    │           │                     
                    │            │                                │                               │───────────────────────────╮    │           │                     
                    │            │                         Minimum│                               │                         ▼ │    │           │                     
                    │            │                                │                               │───────────────────────────╯    │           │                     
                    │            │                                │                               │───────────────────────────╮    │           │                     
                    │            │                              Qu│                               │                         ▼ │    │           │                     
                    │            │                                │                               │───────────────────────────╯    │           │                     
                    │            │                                │                               │───────────────────────────╮    │           │                     
                    │            │                                │                               │                           │    │           │                     
                    │            │                                │                               │───────────────────────────╯    │           │                     
                    │            │                                ╰───────────────────────────────╯                                │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│           │                     
                    │            ││                      Add                      ││                    Cancel                    ││           │                     
                    │            │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│           │                     
                    │            ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
