src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__add_movie_ui__add_movie_ui_tests__tests__snapshot_tests__AddMovieSelectMonitor.snap
---
source: src/ui/radarr_ui/library/add_movie_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Movie  ──────────────────────────────────────────────────────╮                      
                     │test                                                                                                                    │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭───────────╭──────────────────────────────────────  Add Movie - Test  ───────────────────────────────────────╮──────────╮                      
                     │   ✔  Title│                                    New movie blah blah blah                                     │          │                      
                     │=> ✔  Test │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                               ╭────────────────────────────────────────────╮    │          │                      
                     │           │                                ╭───────────────────────────────╮                         ▼ │    │          │                      
                     │           │                                │Movie only                     │───────────────────────────╯    │          │                      
                     │           │                                │Movie and Collection           │───────────────────────────╮    │          │                      
                     │           │                                │None                           │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                         Minimum│                               │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                              Qu│                               │                         ▼ │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                │                               │───────────────────────────╮    │          │                      
                     │           │                                │                               │                           │    │          │                      
                     │           │                                │                               │───────────────────────────╯    │          │                      
                     │           │                                ╰───────────────────────────────╯                                │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │                                                                                                 │          │                      
                     │           │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│          │                      
                     │           ││                      Add                      ││                    Cancel                    ││          │                      
                     │           │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│          │                      
                     │           ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯          │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
